feat(components): 实现组件生命周期方法调用机制
- 新增 ComponentInvoker 类用于统一管理组件生命周期方法调用
- 将 IComponent 接口重命名为 IComponentInvokable 并调整方法名称
- 在 ComponentInfo 中存储组件生命周期委托引用
- 修改 ComponentGenericMap 添加初始化方法并存储组件信息
- 更新 DynamicComponentGroup 在创建和销毁时调用对应生命周期方法
- 重构 WorldCore.CreateEntity 方法为每个组件调用 Awake 生命周期方法
- 添加 ComponentStart 接口支持组件启动时初始化
- 优化 EntityBuilder 存储组件调用器并在创建实体时执行
- 更新 DynamicComponentGroupManager 传递 WorldCore 引用给组管理器

--- a/FLib/FLib.csproj
+++ b/FLib/FLib.csproj
@@ -32,6 +32,10 @@
           <Generator>TextTemplatingFileGenerator</Generator>
           <LastGenOutput>WorldCore.Query.cs</LastGenOutput>
         </None>
+        <None Update="Sources\WorldCores\Worlds\WorldCore.CreateEntity.tt">
+          <Generator>TextTemplatingFileGenerator</Generator>
+          <LastGenOutput>WorldCore.CreateEntity.cs</LastGenOutput>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -55,6 +59,9 @@
         <DependentUpon>WorldCore.Query.tt</DependentUpon>
       </Compile>
       <Compile Update="Sources\WorldCores\World\WorldCore.CreateEntity.cs">
+        <DependentUpon>WorldCore.CreateEntity.tt</DependentUpon>
+      </Compile>
+      <Compile Update="Sources\WorldCores\Worlds\WorldCore.CreateEntity.cs">
         <DependentUpon>WorldCore.CreateEntity.tt</DependentUpon>
       </Compile>
     </ItemGroup>
