还要再改改 重构查询过滤器和动态组件系统，优化实体查询性能
- 将QueryFilter改为struct类型并添加IsEmpty属性和Clear方法
- 重构动态组件索引系统，重命名ComponentTypeOffsetHelper为ComponentSparseList
- 优化Archetype组件掩码管理，实现IDisposable接口进行资源回收
- 更新WorldCore查询API，添加无过滤器重载方法并优化参数传递
- 修复动态组件移除时的组件掩码同步问题
- 在测试中验证实体版本查询功能

--- a/FLib/FLib.csproj
+++ b/FLib/FLib.csproj
@@ -36,6 +36,10 @@
           <Generator>TextTemplatingFileGenerator</Generator>
           <LastGenOutput>WorldCore.CreateEntity.cs</LastGenOutput>
         </None>
+        <None Update="Sources\WorldCores\Worlds\WorldCore.Query.tt">
+          <Generator>TextTemplatingFileGenerator</Generator>
+          <LastGenOutput>WorldCore.Query.cs</LastGenOutput>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -63,6 +67,9 @@
       </Compile>
       <Compile Update="Sources\WorldCores\Worlds\WorldCore.CreateEntity.cs">
         <DependentUpon>WorldCore.CreateEntity.tt</DependentUpon>
+      </Compile>
+      <Compile Update="Sources\WorldCores\Worlds\WorldCore.Query.cs">
+        <DependentUpon>WorldCore.Query.tt</DependentUpon>
       </Compile>
     </ItemGroup>
 
